# malayalam-document-ner

mal-document-ner/: pyproject.toml
mal-document-ner/mal_document_ner/: app.py  tesserac.py
